# tauri-resume-mre

./: .gitignore  README.md  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
