[package]
name = "tauri-resume-mre"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_resume_mre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- GREEN test: build against the local fork that has the #3 fix ---
# (remove this block to go back to published/buggy Tauri for the RED run)
[patch.crates-io]
tauri             = { path = "/Users/jamin/src/tauri/crates/tauri" }
tauri-build       = { path = "/Users/jamin/src/tauri/crates/tauri-build" }
tauri-runtime     = { path = "/Users/jamin/src/tauri/crates/tauri-runtime" }
tauri-runtime-wry = { path = "/Users/jamin/src/tauri/crates/tauri-runtime-wry" }
tauri-macros      = { path = "/Users/jamin/src/tauri/crates/tauri-macros" }
tauri-codegen     = { path = "/Users/jamin/src/tauri/crates/tauri-codegen" }
tauri-utils       = { path = "/Users/jamin/src/tauri/crates/tauri-utils" }

